Bit of cleaning up

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,15 @@
-# Include the CxxTest library headers
-include_directories(${CXXTEST_INCLUDE_DIR})
+# Set up testing
 
-# Add directories containing tests
-add_subdirectory(ExampleLib)
+find_package(CxxTest)
+
+if (${CXXTEST_FOUND})
+
+  enable_testing()
+
+  # Include the CxxTest library headers
+  include_directories(${CXXTEST_INCLUDE_DIR})
+
+  # Add directories containing tests
+  add_subdirectory(ExampleLib)
+
+endif()
